# candle

./: .gitignore  Cargo.toml
candle-core/src/: metal_backend.rs
candle-examples/examples/marian-mt/: README.md  main.rs
candle-examples/examples/t5/: README.md  main.rs
candle-examples/examples/whisper/: main.rs
candle-examples/src/: token_output_stream.rs
candle-metal-kernels/src/: lib.rs  libMetalFlashAttention.metallib
candle-metal-kernels/src/ios/: libMetalFlashAttention.metallib
candle-nn/src/: activation.rs
candle-transformers/src/generation/: mod.rs
candle-transformers/src/models/: marian.rs  mbart.rs  mod.rs
candle-transformers/tests/: generation_tests.rs
iosbridge/: Cargo.toml  README.md  build.rs
iosbridge/src/: iosmbart.rs  ioswhisper.rs  lib.rs  rsbridging.h  test.rs
iosbridge/src/ioswhisper/: multilingual.rs
iosbridge/tests/: adjust.py  generation_tests.rs  test.py  whisper.rs
